# pgraph

./: .codecov.yml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: id.rs  lib.rs
src/graph/: mod.rs
src/graph/vertex/: adj.rs  mod.rs
src/pgraph/: edge.rs  external_impls.rs  mod.rs
src/pgraph/vertex/: adj.rs  mod.rs
src/tests/: mod.rs  panics.rs
tools/: check.sh  codecov.sh
