[package]
name = "pgraph"
version = "0.2.0"
authors = ["Weston Carvalho <carvalhoweston@gmail.com>"]
edition = "2018" 

# [features]
# algorithms = ["petgraph"]

[dependencies]
im = "^12.2.0"
petgraph = "^0.4.13"
# petgraph = { version = "^0.4.13", optional = true }

[dev-dependencies]
more-asserts = "^0.2.1"